--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="capture-photo-animate"></div>
         </div>
     </div>
-
+    <script src="./db.js"></script>
     <script src="./script.js"></script>
 </body>
 </html>
